# settimana-bianca

./: .gitignore  CNAME  README.md  makefile  mkdocs.yml  pyproject.toml  setup_dev_env.sh
.github/workflows/: deploy_site.yaml
docs/: contatti.md  generale.md  goodbye.md  index.md  info.md
docs/info/: contacts.md  emergency.md  index.md
docs/overrides/: hero.html
docs/stylesheets/: extra.css  hero.css
requirements/: docs-requirements.txt  environment.yml  requirements.txt
