[project]
name = "settimana_bianca"
version = "0.0.0"
authors = [
  { name="Ruggero Aberti", email="ruggero@example.com" },
]
description = "The ultimate web app for a well organized lunch."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["website", "static", "mkdocs", "material"]
license = {text = "Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Free for non-commercial use",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/rufusxx/settimana-bianca"
Issues = "https://github.com/rufusxx/settimana-bianca/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/requirements.txt"]}
